syntax = "proto3";
option go_package = "github.com/MumMumGoodBoy/review-service/proto";
import "google/protobuf/timestamp.proto";

package proto;

service Review {
    // Review
    rpc CreateReview(ReviewRequest) returns (ReviewResponse);
    rpc GetReviewsByFoodId(GetReviewsByFoodRequest) returns (GetReviewsResponse);
    rpc GetReviewsByRestaurantId(GetReviewsByRestaurantRequest) returns (GetReviewsResponse);
    rpc GetReview(GetReviewRequest) returns (ReviewResponse);
    rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
    rpc DeleteReview(DeleteReviewRequest) returns (Empty);
    // Favorite
    rpc AddFavoriteFood(AddFavoriteFoodRequest) returns (Empty);
    rpc RemoveFavoriteFood(RemoveFavoriteFoodRequest) returns (Empty);
    rpc GetFavoriteFoodsByUserId(GetFavoriteFoodsByUserIDRequest) returns (GetFavoriteFoodsByUserIDResponse);
}

message Empty {}

message ReviewRequest {
    string restaurant_id = 1;
    string  food_id = 2;
    int32 user_id = 3;
    string content = 4;
    float rating = 5;
    google.protobuf.Timestamp created_at = 6;
}

message GetReviewsByRestaurantRequest {
    string restaurant_id = 1;
}

message GetReviewsByFoodRequest {
    string food_id = 1;
}

message GetReviewRequest {
    string review_id = 1;
}

message UpdateReviewRequest {
    string review_id = 1;
    string content = 2;
    float rating = 3;
    int32 user_id = 4;
    bool is_admin = 5;
}

message DeleteReviewRequest {
    string review_id = 1;
    int32 user_id = 2;
    bool is_admin = 3;
}

message ReviewResponse {
    string review_id = 1;
    string restaurant_id = 2;
    string food_id =3;
    int32 user_id = 4;
    string content = 5;
    float rating = 6;
    google.protobuf.Timestamp created_at = 7;
}

message GetReviewsResponse {
    repeated ReviewResponse reviews = 1;
}

message AddFavoriteFoodRequest {
    int32 user_id = 1;
    string food_id = 2;
    string restaurant_id = 3;
}

message RemoveFavoriteFoodRequest {
    int32 user_id = 1;
    string food_id = 2; 
    string restaurant_id = 3;   
}

message GetFavoriteFoodsByUserIDRequest {
    int32 user_id = 1;
}

message FavoriteFoodResponse {
    string food_id = 1;
    string restaurant_id = 2;
}

message GetFavoriteFoodsByUserIDResponse {
    repeated FavoriteFoodResponse favorite_foods = 1;
}